--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,21 @@ authors = ["Nick Seguin"]
 
 
 [dependencies]
+actix = "0.13.0"
+actix-rt = "2.8.0"
+actix-web = "4.3.0"
+actix-web-actors = "4.2.0"
+async-trait = "0.1.64"
+config = "0.13.3"
+fake = "2.5.0"
+futures = "0.3.26"
+log = "0.4.17"
+postgres-types = "0.2.4"
+pretty_env_logger = "0.4.0"
+rand = "0.8.5"
+serde = "1.0.152"
+serde_json = "1.0.93"
+test-context = "0.1.4"
+time = "0.3.17"
+tokio = "1.25.0"
+tokio-postgres = "0.7.7"
