--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -17,6 +17,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
       - name: install cargo tools
         run: |
+          rustup component add rustfmt
           rustup component add clippy
           cargo install cargo-audit
       - name: cargo build --verbose
